# StockMove

doc/: PROJECT_CURRENT_STAGE.md  PROJECT_ROADMAP_90_DAY.md  PROJECT_STATE.md
market-info-layer/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
market-info-layer/config/: macro_series.yaml  watchlist.yaml
market-info-layer/scripts/: run_system_verification.sh
market-info-layer/src/market_info_layer/: cli.py  debug_export.py  settings.py
market-info-layer/src/market_info_layer/analysis/: daily_brief.py  event_hash.py  explain_moves.py  form4_parser.py  form8k_parser.py  price_context.py  sec_filing_parser.py  watchlist_review.py
market-info-layer/src/market_info_layer/collectors/: fred_macro.py  nasdaq_halts.py  prices.py  sec_documents.py  sec_edgar.py
market-info-layer/src/market_info_layer/dashboard/: dataframes.py  streamlit_app.py
market-info-layer/src/market_info_layer/db/: database.py  models.py  schema.py
market-info-layer/src/market_info_layer/reports/: markdown_report.py
market-info-layer/src/market_info_layer/utils/: rate_limit.py
market-info-layer/tests/: test_daily_brief.py  test_dashboard_dataframes.py  test_db.py  test_debug_export.py  test_filing_processing.py  test_fred_macro.py  test_nasdaq_halts.py  test_price_context_regressions.py  test_prices.py  test_sec_cik_validation.py  test_sec_edgar.py  test_sec_filing_parser_regressions.py  test_watchlist.py
