[project]
name = "market-info-layer"
version = "0.1.0"
description = "Local market information collection, storage, and journaling system"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "pandas>=2.0",
  "sqlalchemy>=2.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "typer>=0.12",
  "python-dotenv>=1.0",
  "feedparser>=6.0",
  "streamlit>=1.30",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
market-info-layer = "market_info_layer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_info_layer"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
